--- a/src/app/auth/auth-reg/auth-reg.component.html
+++ b/src/app/auth/auth-reg/auth-reg.component.html
@@ -28,13 +28,9 @@
     errorMsg="Please enter a password that is at least 8 characters and no more than 32 characters."
   ></app-auth-control>
 
-  <button
-    type="submit"
-    [disabled]="registerForm.invalid"
-    class="w-fit mt-2 text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-semibold rounded-lg px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 disabled:bg-blue-300 dark:disabled:bg-blue-300 transition-colors"
-  >
+  <app-blue-button [isSubmit]="true" [valid]="registerForm.valid">
     Create new account
-  </button>
+  </app-blue-button>
 
   <!-- {{ registerForm.value | json }} -->
 </form>
