--- a/src/app/shared/components/blue-button/blue-button.component.html
+++ b/src/app/shared/components/blue-button/blue-button.component.html
@@ -1,7 +1,7 @@
 <button
-  type="submit"
-  [disabled]="valid"
+  [type]="isSubmit ? 'submit' : 'button'"
+  [disabled]="!valid"
   class="w-fit mt-2 text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-semibold rounded-lg px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 disabled:bg-blue-300 dark:disabled:bg-blue-300 transition-colors"
 >
-  {{ content }}
+  <ng-content></ng-content>
 </button>
