fix: cleanup && css changes

--- a/src/app/features/auth/auth-control/auth-control.component.html
+++ b/src/app/features/auth/auth-control/auth-control.component.html
@@ -7,6 +7,7 @@
 >
   {{ labelMsg }}
 </label>
+
 <input
   [type]="inputType"
   id="error"
@@ -14,11 +15,7 @@
   [placeholder]="placeholderMsg"
   [value]="value"
   (input)="onInputValueChange($event)"
-  [ngClass]="
-    isError
-      ? 'bg-red-50 border-red-500 text-red-900 placeholder-red-700 text-sm rounded-lg focus:ring-red-500/20 dark:bg-gray-700  focus:border-red-500  dark:text-red-500 dark:placeholder-red-500 dark:border-red-500 dark:focus:ring-red-500/20 dark:focus:border-red-500'
-      : 'bg-gray-50 border-gray-300 text-gray-900 focus:ring-blue-500/20 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:placeholder-gray-400 dark:focus:ring-blue-500/20 dark:focus:border-blue-500'
-  "
+  [ngClass]="isError ? 'input-base-red' : 'input-base-blue'"
   (blur)="onBlur()"
 />
 <p
