--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,15 @@
     @apply text-base h-full dark:bg-slate-900;
   }
 }
+
+//form
+.form-base {
+  @apply flex flex-col gap-y-6 items-center sm:items-stretch dark:bg-slate-900 shadow-md p-6 rounded-md;
+}
+
+.input-base-red {
+  @apply bg-red-50 border-red-500 text-red-900 placeholder-red-700 text-sm rounded-lg focus:ring-red-500/20 dark:bg-gray-700  focus:border-red-500  dark:text-red-500 dark:placeholder-red-500 dark:border-red-500 dark:focus:ring-red-500/20 dark:focus:border-red-500;
+}
+.input-base-blue {
+  @apply bg-gray-50 border-gray-300 text-gray-900 focus:ring-blue-500/20 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:placeholder-gray-400 dark:focus:ring-blue-500/20 dark:focus:border-blue-500;
+}
