--- a/src/app/features/auth/auth-reg/auth-reg.component.html
+++ b/src/app/features/auth/auth-reg/auth-reg.component.html
@@ -1,9 +1,6 @@
 <div class="h-full flex items-center justify-center">
-  <form
-    class="form-base"
-    [formGroup]="registerForm"
-  >
-    <h1 class="text-3xl mb-4 font-bold w-max dark:text-white">
+  <form class="form-base" [formGroup]="registerForm">
+    <h1 class="text-3xl my-4 font-bold w-max dark:text-white">
       Create your account
     </h1>
     <app-auth-control
@@ -35,6 +32,17 @@
         Create new account
       </app-blue-button>
     </div>
+    <p
+      class="col-span-1 sm:col-span-2 mt-2 text-sm text-gray-900 dark:text-white order-2 sm:order-none"
+    >
+      Have an account?
+      <a
+        routerLink="/"
+        class="cursor-pointer text-blue-500 hover:text-blue-600"
+      >
+        Login
+      </a>
+    </p>
     <!-- {{ registerForm.value | json }} -->
   </form>
 </div>
