--- a/src/app/features/auth/auth-login/auth-login.component.html
+++ b/src/app/features/auth/auth-login/auth-login.component.html
@@ -55,7 +55,7 @@
       >
         Don't have an account?
         <a
-          routerLink="/signup"
+          routerLink="signup"
           class="cursor-pointer text-blue-500 hover:text-blue-600"
         >
         
