--- a/src/app/features/auth/auth-reg/auth-reg.component.html
+++ b/src/app/features/auth/auth-reg/auth-reg.component.html
@@ -38,7 +38,7 @@
     >
       Have an account?
       <a
-        routerLink="/"
+        routerLink="/auth"
         class="cursor-pointer text-blue-500 hover:text-blue-600"
       >
         Login
